--- a/index.html
+++ b/index.html
@@ -1,139 +1,6 @@
  <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en">
 
-<style>
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    /*font-family: Arial;*/
-}
-
-p {
-    font-family: 'Roboto Slab', serif;
-}
-
-.project-img {
-    width: 100%;
-}
-
-.project-desc {
-    display: none;
-}
-
-ul {
-    width: 100%;
-    margin: 0 auto;
-    padding: 0;
-}
-
-ul li {
-    display: inline;
-    text-align: center;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0 0;
-}
-
-.desc-header {
-    display: inline-block;
-    width: 10%;
-    /*padding: .75rem 0;*/
-    padding: 0 0;
-    margin: 0;
-    text-decoration: none;
-    color: #333;
-}
-
-.desc-header:hover {
-    text-decoration: none;
-    color: #777;
-}
-
-#desc-header-underline {
-    height: 0.15rem;
-    width: 0;
-    margin: 0 0;
-    background: #333;
-    border: none;
-    transition: .3s ease-in-out;
-    margin-left: 0;
-}
-
-.notransition {
-  -webkit-transition: none !important;
-  -moz-transition: none !important;
-  -o-transition: none !important;
-  -ms-transition: none !important;
-  transition: none !important;
-}
-
-.row {
-    display: -ms-flexbox; /* IE10 */
-    display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
-    flex-wrap: wrap;
-    padding: 0 4px;
-}
-
-/* Create three equal columns that sit next to each other */
-.column {
-    -ms-flex: 33%; /* IE10 */
-    flex: 33%;
-    max-width: 33%;
-    padding: 0 4px;
-}
-
-.column img {
-    margin-top: 8px;
-    padding: 16px;
-    max-width: 180px;
-    vertical-align: middle;
-    -webkit-filter: grayscale(0%);
-    filter: grayscale(0%) opacity(100%);
-    transition: 0.2s;
-}
-
-.column img:hover {
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(0%) opacity(50%);
-}
-
-/* Responsive layout - makes columns stack instead of next to each other */
-@media screen and (max-width: 900px) {
-    .column {
-        -ms-flex: 50%;
-        flex: 50%;
-        max-width: 50%;
-    }
-}
-
-@media screen and (max-width: 750px) {
-    ul li {
-        display: block;
-    }
-    #desc-header-underline {
-        display: none;
-    }
-    .desc-header:active {
-        text-decoration: underline;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .column {
-        -ms-flex: 100%;
-        flex: 100%;
-        max-width: 100%;
-    }
-}
-
-
-
-</style>
-
 <head>
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
@@ -147,6 +14,7 @@ ul li {
     <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="src/bootstrap-social.css">
     <link rel="stylesheet" type="text/css" href="src/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="src/custom.css">
 </head>
 
 <body>
@@ -154,10 +22,10 @@ ul li {
 <div class="title" style="text-align: center; padding: 30px;">
     <h1>Joseph Moon</h1>
     <p>Computer Science Graduate</p>
-    <ul>
-        <li><a class="desc-header" id="desc-header-portfolio" href="#">Portfolio</a></li>
-        <li><a class="desc-header" id="desc-header-education" href="#">Education</a></li>
-        <li><a class="desc-header" id="desc-header-resume" href="#">Résumé</a></li>
+    <ul class="desc-headers">
+        <li class="desc-headers-li"><a class="desc-header" id="desc-header-portfolio" href="#">Portfolio</a></li>
+        <li class="desc-headers-li"><a class="desc-header" id="desc-header-education" href="#">Education</a></li>
+        <li class="desc-headers-li"><a class="desc-header" id="desc-header-resume" href="#">Résumé</a></li>
         <hr id="desc-header-underline"/>
     </ul>
     <a class="btn btn-social-icon btn-lg btn-github" href="https://github.com/jmoon1506"><i class="fa fa-github"></i></a>
@@ -213,7 +81,7 @@ ul li {
                 <span style="max-width: 40%"><img src="images/cs160-chat-large.png" style="max-width: 90%"/></span>
             </div>
             <div style="text-align: left;">
-                <p >Worked with a project group to address the course theme: "bridging the political divide." We developed a web application to discuss controversial political issues with the humanizing influence of face-to-face interaction.</p>
+                <p >Worked with a project group to address the course theme: "bridging the political divide." We developed a web application that lets users discuss controversial political issues with the humanizing influence of face-to-face interaction.</p>
                 <p>Type: Coursework</p>
                 <p>Course: CS 260 User Interfaces, UC Berkeley</p>
                 <p>Skills: Javascript, Node, MongoDB</p>
@@ -347,7 +215,7 @@ ul li {
                 <span style="max-width: 33%"><img src="images/cs184-dof-large.png" style="max-width: 90%"/></span>
             </div>
             <div style="text-align: left;">
-                <p>Implemented a raycasting renderer with many features. These include caustics, importance sampling, microfacet materials, depth of field, and many others.</p>
+                <p>Implemented a raycasting renderer with numerous features. These include caustics, importance sampling, microfacet materials, depth of field, and many others.</p>
                 <p>Type: Coursework</p>
                 <p>Course: CS 284 Graphics, UC Berkeley</p>
                 <p>Skills: C++, OpenGL</p>
@@ -398,6 +266,46 @@ ul li {
                 <p>Links: <a href="http://joemoon.me/cs184-combined/hw1.html">Report</a></p>
             </div>
         </div>
+        <div id="education-desc" style="display: none;">
+            <h3>Education</h3>
+            <div style="display: flex; flex-wrap: nowrap; padding: 16px">
+                <span style="max-width: 60%"><img src="images/cs184-mipmap-bilinear.png" style="max-width: 90%"/></span>
+                <span style="max-width: 40%"><img src="images/cs184-mipmap-large.png" style="max-width: 90%"/></span>
+            </div>
+            <div style="text-align: left;">
+                <p>Wrote a rasterizer for SVG and texture data. Implemented screen rasterization techniques, such as supersampling, bilinear interpolation, and mip-mapping.</p>
+                <p>Type: Coursework</p>
+                <p>Course: CS 284 Graphics, UC Berkeley</p>
+                <p>Skills: C++, OpenGL</p>
+                <p>Links: <a href="http://joemoon.me/cs184-combined/hw1.html">Report</a></p>
+            </div>
+        </div>
+        <div id="resume-desc" style="display: none;">
+            <div align="left" style="padding-top: 16px"><a class="btn btn-md"><i class="fa fa-download"></i> <p style="display: inline; font-size: 16px;">Download</p></a></div>
+            <hr/>
+            <div style="display: flex; flex-wrap: nowrap; padding: 16px; text-align: left;">
+                <span style="max-width: 60%">
+                    <h6>EXPERIENCE</h6>
+                    <p>Software Developer - Iconoir</p>
+                    <p>Aug 2017 - Dec 2017</p>
+                    <ul>
+                        <li>Developed a native Android user interface app</li>
+                        <li>Created novel system of asynchronous inter-process communication for non-rooted devices</li>
+                    </ul>
+                </span>
+                <span style="max-width: 40%; padding-left: 32px;">
+                    <h6>SKILLS</h6>
+                    <p>C++</p>
+                    <p>Python</p>
+                    <p>Java, Android</p>
+                    <p>Javascript, HTML/CSS</p>
+                    <p>TensorFlow</p>
+                    <p>WebGL, OpenGL, GLSL</p>
+                    <p>OpenMP, MPI, CUDA</p>
+                    <p>SQL</p>
+                </span>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -411,7 +319,7 @@ ul li {
     };
 
     var current_desc_header;
-    var current_project_desc = 0;
+    var current_proj_idx = 0;
     function updateUnderline(width) {
         if (current_desc_header) {
             var underline = document.getElementById('desc-header-underline');
@@ -425,18 +333,26 @@ ul li {
 
     $(document).ready(function() {
         $('img.project-img').click(function() {
+            document.getElementById('education-desc').style = "display: none";
+            document.getElementById('resume-desc').style = "display: none";
             var descs = document.getElementsByClassName("project-desc");
             for (var i = 0; i < descs.length; i++) {
-               descs[i].style = "display: none";
+                if (descs[i].id == this.id + '-desc') {
+                    descs[i].style = "display: block";
+                    current_proj_idx = i;
+                } else {
+                    descs[i].style = "display: none";
+                }
             }
-            document.getElementById(this.id + '-desc').style.display = 'block';
+            // document.getElementById(this.id + '-desc').style.display = 'block';
 
             current_desc_header = document.getElementById('desc-header-portfolio');
             width = $(current_desc_header).textWidth();
             updateUnderline(width);
         });
         $('a.desc-header').click(function() {
-            // console.log(this.id);
+            document.getElementById('education-desc').style = "display: none";
+            document.getElementById('resume-desc').style = "display: none";
             var descs = document.getElementsByClassName("project-desc");
             for (var i = 0; i < descs.length; i++) {
                descs[i].style = "display: none";
@@ -444,10 +360,12 @@ ul li {
             if (this.id == 'desc-header-portfolio') {
                 // var randIdx = Math.floor(Math.random() * descs.length);
                 if (this == current_desc_header)
-                    current_project_desc = (current_project_desc + 1) % descs.length;
-                descs[current_project_desc].style.display = 'block';
+                    current_proj_idx = (current_proj_idx + 1) % descs.length;
+                descs[current_proj_idx].style.display = 'block';
             } else if (this.id == 'desc-header-education') {
+                document.getElementById('education-desc').style = "display: block";
             } else if (this.id == 'desc-header-resume') {
+                document.getElementById('resume-desc').style = "display: block";
             }
             current_desc_header = this;
             width = $(this).textWidth();
