--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     header('Cache-Control: no cache'); //no cache
     session_cache_limiter('must-revalidate');
 ?>
-<div class="title" style="text-align: center; padding: 30px;">
+<div id="title" style="text-align: center; padding: 30px;">
     <h1>Joseph Moon</h1>
     <h4>Computer Science Graduate</h4>
     <ul class="desc-headers">
@@ -65,6 +65,7 @@
         </div>
     </div>
     <div id="descs">
+        <div id='follow-spacer' style="width: 100%; height: 0px;"></div>
         <div class="project-desc" id="iconoir-desc">
             <h3>Iconoir</h3>
             <div style="display: flex; flex-wrap: nowrap; padding: 16px">
@@ -339,9 +340,9 @@
             </div>
         </div>
         <div id="contact-desc" style="display: none;">
-            <p style="margin-bottom: 2rem;"><a class='link' id='contact-mail-link' href='#'><i class="fa fa-envelope"></i>&nbsp;<span id='contact-mail'>mail</span></a></p>
+            <p style="margin-bottom: 2rem;"><a class='link' id='contact-mail-link' href=''><i class="fa fa-envelope"></i>&nbsp;<span id='contact-mail'>mail</span></a></p>
             <span class="contact-or">OR</span>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfQIwl_sSjgwR4qHkNsrwhLjj7eQMNvPdYQJY8PggSsm4qMNQ/viewform?embedded=true&ttl=0" width="60%" frameborder="0" height="800px" style="display: block; width: 80%; margin: 3rem auto 0 auto;">Loading...</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfQIwl_sSjgwR4qHkNsrwhLjj7eQMNvPdYQJY8PggSsm4qMNQ/viewform?embedded=true&ttl=0" width="80%" frameborder="0" height="800px" style="display: block; width: 80%; margin: 3rem auto 0 auto;">Loading...</iframe>
         </div>
     </div>
 </div>
@@ -375,6 +376,23 @@
         }
     }
 
+    function updateFollowSpacer() {
+        var title = document.getElementById('title');
+        var follow_spacer = document.getElementById('follow-spacer');
+        var scrollHeight = $(window).scrollTop();
+        var titleHeight = $(title).height() + 60;
+        // console.log($(window).scrollTop());
+        if (current_desc_header && current_desc_header.id == 'desc-header-portfolio') {
+            if (scrollHeight <= titleHeight && parseInt(follow_spacer.style.height) > 0) {
+                follow_spacer.style.height = '0px';
+            } else if (scrollHeight > titleHeight) {
+                follow_spacer.style.height = (scrollHeight - titleHeight) + 'px';
+            }
+        } else {
+            follow_spacer.style.height = '0px';
+        }
+    }
+
     $(document).ready(function() {
         $('img.project-img').click(function() {
             document.getElementById('resume-desc').style = "display: none";
@@ -394,7 +412,8 @@
             width = $(current_desc_header).textWidth();
             updateUnderline(width);
         });
-        $('a.desc-header').click(function() {
+        $('a.desc-header').click(function(e) {
+            e.preventDefault();
             document.getElementById('resume-desc').style = "display: none";
             document.getElementById('contact-desc').style = "display: none";
             var descs = document.getElementsByClassName("project-desc");
@@ -417,18 +436,18 @@
             current_desc_header = this;
             width = $(this).textWidth();
             updateUnderline(width);
+            updateFollowSpacer();
         });
         $(window).resize(function(){
-            // width = $(this).textWidth();
             $('#desc-header-underline').addClass('notransition');
             updateUnderline();
+            updateFollowSpacer();
             $('#desc-header-underline').removeClass('notransition');
         });
-        document.getElementById('contact').onsubmit = function(e){
-            e.preventDefault();
-            document.getElementById('contact').reset();
-            // alert('blah');
-        };
+
+        $(window).scroll(function() {
+            updateFollowSpacer();
+        });
     });
 </script>
 <script async>
