--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             if (scrollHeight <= titleHeight && parseInt(follow_spacer.style.height) > 0) {
                 follow_spacer.style.height = '0px';
             } else if (scrollHeight > titleHeight) {
-                var spacerHeight = min(scrollHeight - titleHeight, 4096);
+                var spacerHeight = Math.min(scrollHeight - titleHeight, 4096);
                 follow_spacer.style.height = spacerHeight + 'px';
             }
         } else {
