--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="src/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="src/custom.css">
     <link rel="stylesheet" type="text/css" href="src/desktop.css" id='desktop'>
-    <link rel="stylesheet" type="text/css" href="src/mobile.css" id='mobile'>
+    <link rel="stylesheet" type="text/css" href="src/mobile.css" id='mobile' disabled>
 </head>
 
 <body>
@@ -403,8 +403,7 @@
     $(document).ready(function() {
         if (isMobileDevice()) {
             $(document.getElementById('desktop')).attr('disabled', 'disabled');
-        } else {
-            $(document.getElementById('mobile')).attr('disabled', 'disabled');
+            $(document.getElementById('mobile')).attr('disabled', false);
         }
 
         $('img.project-img').click(function() {
