keep right side of resume on mobile screen

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <div align="left" style="padding: 0;"><a class="btn btn-md link" href='resume.pdf' download><i class="fa fa-download"></i>&nbsp;Download</h3></a></div>
             <hr style="margin: 1.5rem 0 1rem 0;" />
             <div style="display: flex; flex-wrap: nowrap; text-align: left;">
-                <span style="max-width: 60%">
+                <span id="resume-left">
                     <p class="resume-item" style="font-size: 2.5rem;">Joseph Moon</p>
                     <p class='resume-item' style='display: block; margin-bottom: 2rem;'>Computer Science Graduate</p>
                     <h4 class='resume-header'>EDUCATION</h4>
@@ -313,7 +313,7 @@
                         <li>Developed flow models for underground gravity drainage of reservoirs</li>
                     </ul>
                 </span>
-                <span style="max-width: 40%; padding-left: 32px;">
+                <span id="resume-right">
                     <h4 class='resume-header'>PORTFOLIO</h4>
                     <p class='resume-text'>joemoon.me</p>
                     <h4 class='resume-header'>SOCIAL</h4>
