--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         <li>TensorFlow</li>
                         <li>WebGL, OpenGL, GLSL</li>
                         <li>OpenMP, MPI, CUDA</li>
-                        <li>SQL</li>
+                        <li>SQL, MongoDB, Hadoop</li>
                     </ul>
                     <h4 class='resume-header'>COURSEWORK</h4>
                     <p class='resume-text'>Parallel Computing, Graphics, Machine Learning, User Interfaces, Databases, Linear Algebra, Discrete Math, Data Structures, Advanced Calculus, Reservoir Simulation</p>
